Add purchase plan functionality   23 May 2025  by Keshav Savita

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -718,4 +718,5 @@
     <string name="enter_sku">Enter SKU</string>
     <string name="subscribe_plan">Subscribe Plan</string>
     <string name="skip">Skip</string>
+    <string name="subscribe">Subscribe</string>
 </resources>
