update code  29 May 2025  by Keshav Savita

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -722,5 +722,5 @@
     <string name="recommended">Recommended</string>
     <string name="my_subscription">My Subscription</string>
     <string name="my_plan_history">My Plan History</string>
-    <string name="recipt">Recipt</string>
+    <string name="recipt">Receipt</string>
 </resources>
