update code  31 May 2025  by Keshav Savita

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -723,4 +723,5 @@
     <string name="my_subscription">My Subscription</string>
     <string name="my_plan_history">My Plan History</string>
     <string name="recipt">Receipt</string>
+    <string name="subscription">Subscription</string>
 </resources>
